<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment"
    android:background="#B3E5FC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:padding = "15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debate_profile"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "40sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="#03A9F4"
            />
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "25dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "60sp"
            android:layout_gravity="center"
            android:text = "@string/michael_rodyushkin"
            android:gravity="center"
            android:id = "@+id/profileName"/>
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textColor = "#212121"
            android:textSize = "40sp"
            android:layout_gravity="center"
            android:text = "@string/junior_from_abington_heights_high_school"
            android:gravity="center"
            android:id = "@+id/profileSchoolGrade"/>
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "30dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "40sp"
            android:layout_gravity="center"
            android:text = "@string/wins_20_losses_0"
            android:gravity="center"
            android:id = "@+id/winLossText"/>
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "45dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:layout_gravity="center"
            android:text = "@string/preferred_pronouns"
            android:gravity="center" />
        <TextView
            android:padding = "1dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:layout_gravity="center"
            android:text = "@string/he_him"
            android:gravity="center"
            android:id = "@+id/profilePronoun"/>
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:textStyle = "bold"
            android:layout_gravity="center"
            android:text = "@string/default_debate_style"
            android:gravity="center" />
        <TextView
            android:padding = "1dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:layout_gravity="center"
            android:text = "@string/public_forum"
            android:gravity="center"
            android:id = "@+id/profileDebateStyle"/>
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:layout_gravity="center"
            android:text = "@string/debating_for_2_years"
            android:gravity="center"
            android:id = "@+id/profileYearsDebating"/>
        <TextView
            android:padding = "1dp"
            android:layout_marginTop = "15dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:layout_gravity="center"
            android:text = "@string/fun_fact"
            android:gravity="center" />
        <TextView
            android:padding = "1dp"
            android:layout_marginLeft = "15dp"
            android:layout_marginRight = "15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich"
            android:textColor = "#212121"
            android:textSize = "30sp"
            android:layout_gravity="center"
            android:text = "@string/i_really_like_dogs"
            android:gravity="center"
            android:id = "@+id/profileFunFact"/>
        <Button
            android:layout_marginTop = "30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/edit_profile"
            android:textSize = "30sp"
            android:padding="25dp"
            android:background="#0288D1"
            android:textColor = "#ffffff"
            android:layout_gravity="center"
            android:id = "@+id/profileEdit"/>
    </LinearLayout>

</ScrollView>