<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoCollector">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/general_info"
            android:fontFamily="@font/ostrich"
            android:textStyle = "bold"
            android:textColor = "#212121"
            android:textSize = "40sp"
            android:gravity = "center"
            android:background="#03A9F4"
            android:padding = "15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/name_nickname"
            android:maxLength = "25"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop = "25dp"
            android:gravity = "center"
            android:textColor = "#757575"
            android:id = "@+id/inputName"
            android:inputType="textPersonName" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/preferred_pronoun"
            android:singleLine = "true"
            android:maxLength = "10"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop = "25dp"
            android:gravity = "center"
            android:textColor = "#757575"
            android:id = "@+id/inputPronoun"
            android:inputType="textPersonName"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/school_name"
            android:singleLine = "true"
            android:maxLength = "30"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop = "25dp"
            android:gravity = "center"
            android:textColor = "#757575"
            android:id = "@+id/inputSchool"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id = "@+id/infoDebateStyleText"
            android:text = "@string/default_debate_style_public_forum"
            android:layout_marginTop = "25dp"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_gravity = "center"
            android:textSize = "25sp"
            android:textColor = "#757575"
            android:gravity = "center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity = "center"
            android:layout_marginTop = "25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text = "@string/grade"
                android:textColor = "#757575"
                android:textSize = "25sp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id = "@+id/gradeSpinner"
                android:textSize = "25sp"
                android:textColor = "#757575"
                 />
        </LinearLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/years_debating"
            android:singleLine = "true"
            android:maxLength = "2"
            android:layout_marginLeft="125dp"
            android:layout_marginRight="125dp"
            android:layout_marginTop = "25dp"
            android:gravity = "center"
            android:textColor = "#757575"
            android:id = "@+id/inputYearsDebating"
            android:inputType="number"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint = "@string/fun_fact_100_character_limit"
            android:maxLength = "100"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop = "25dp"
            android:gravity = "center"
            android:textColor = "#757575"
            android:id = "@+id/inputFunFacts"
            android:inputType="text" />
        <Button
            android:layout_marginTop = "30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/submit"
            android:textSize = "30sp"
            android:padding="25dp"
            android:background="#0288D1"
            android:textColor = "#ffffff"
            android:layout_gravity="center"
            android:onClick = "submitInfo"/>
    </LinearLayout>

</ScrollView>